add a nav__title

--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filatelistyka</title>
+    <!-- Meta tags -->
     <meta name="description"
         content="Odkryj fascynujący świat filatelistyki na naszej stronie. Znajdź cenne informacje, porady i inspiracje dla kolekcjonerów znaczków pocztowych. Dołącz do naszej społeczności pasjonatów i poszerz swoją wiedzę o historii oraz różnorodności znaczków pocztowych.">
-
+    <meta name="keywords"
+        content="Filatelistyka, Znaczki pocztowe, Kolekcje znaczków, Pasja filatelistyczna, Kolekcjonowanie znaczków, Historia poczty, Rzemiosło filatelistyczne, Społeczność filatelistyczna, Znaczkomania, Znaczkowe skarby, Wartościowe znaczki, Znaczkowe odkrycia, Kupno i sprzedaż znaczków, Artykuły filatelistyczne, Filatelistyczne wydarzenia, Wiedza filatelistyczna, Nowości w świecie znaczków, Kuriozalne znaczki, Filatelistyczne blogowanie, Znaczkowe inspiracje">
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Life+Savers:wght@400;700;800&display=swap" rel="stylesheet">
+    <!-- Links -->
+    <link rel="stylesheet" href="./dist/css/style.min.css">
 </head>
 
 <body>
-
+    <nav class="nav">
+        <a href="#" class="nav__title">
+            <p>Filatelistyka</p>
+            Łukasz Kaczmarczyk
+        </a>
+    </nav>
 </body>
 
 </html>
