--- a/index.html
+++ b/index.html
@@ -14,16 +14,34 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Life+Savers:wght@400;700;800&display=swap" rel="stylesheet">
-    <!-- Links -->
+    <!-- JS -->
+    <script src="./dist/js/nav.min.js" defer></script>
+    <!-- CSS -->
+    <link rel="stylesheet" href="./dist/css/hamburger.min.css">
     <link rel="stylesheet" href="./dist/css/style.min.css">
 </head>
 
 <body>
-    <nav class="nav">
-        <a href="#" class="nav__title">
-            <p>Filatelistyka</p>
-            Łukasz Kaczmarczyk
-        </a>
+    <nav class="nav" ">
+        <div class=" wrapper">
+        <div class="nav__box">
+            <a href="#" class="nav__title" id="navTitle">
+                <p>Filatelistyka</p>
+                Łukasz Kaczmarczyk
+            </a>
+            <button class=" hamburger hamburger--spin" type="button" id="hamburger">
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </button>
+        </div>
+        <div class="nav__links" id="navLinks">
+            <a href="#" class="nav__item">o mnie</a>
+            <a href="#" class="nav__item">znaczki</a>
+            <a href="#" class="nav__item">wycena</a>
+            <a href="#" class="nav__item">kontakt</a>
+        </div>
+        </div>
     </nav>
 </body>
 
