--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
         </div>
         </div>
     </nav>
+
+    <header class="header">
+        <div class="header__image">
+            <div class="header__shadow">
+
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
