--- a/index.html
+++ b/index.html
@@ -48,6 +48,21 @@
         <div class="header__image">
             <div class="header__shadow">
 
+                <div class="header__text-box">
+
+                    <div class="header__title">
+                        <h1>Filatelistyka</h1>
+                        <h2>Łukasz Kaczmarczyk</h2>
+                    </div>
+
+                    <p class="header__description">
+                        Z ogromną przyjemnością zajmuję się wyceną i kolekcjonowaniem znaczków, współpracując z
+                        entuzjastami z całej Polski.
+                    </p>
+
+                    <a href="#" class="button">Poznaj mnie</a>
+                </div>
+
             </div>
         </div>
     </header>
