--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                         </div>
 
                         <p class="header__description">
-                            Z ogromną przyjemnością zajmuję się wyceną i kolekcjonowaniem znaczków, współpracując z
+                            Zajmuję się wyceną i kolekcjonowaniem znaczków, sprawia mi to dużo przyjemności i
+                            satysfakcji, współpracując z
                             entuzjastami z całej Polski.
                         </p>
 
