--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
             </div>
         </div>
+        <div class="white-block white-block--right white-block--bottom"></div>
     </header>
 </body>
 
