add about-me section

--- a/index.html
+++ b/index.html
@@ -69,6 +69,44 @@
         </div>
         <div class="white-block white-block--right white-block--bottom"></div>
     </header>
+
+    <main class="main">
+        <section class="section about-me">
+            <div class="wrapper">
+                <div class="section__heading">o mnie</div>
+                <div class="about-me__box">
+                    <p>
+                    <div class="about-me__image-container">
+                        <img src="./dist/img/small-about.jpg"
+                            alt="Lupa leżąca na dużej ilości róznokolorowych znaczków pocztowych" class="about-me__img">
+                    </div>
+                    <p class="about-me__text-box">
+                        Nazywam się Łukasz Kaczmarczyk, i od lat zajmuję się moją pasją, jaką jest filatelistyka. W
+                        moim życiu znaczki odgrywają szczególne miejsce, a moje wieloletnie doświadczenie pozwala mi
+                        z pełnym zaufaniem prowadzić działania w tej dziedzinie.
+                        </br> </br>
+                        Jako człowiek z pasją do zbierania i wyceny znaczków, nie uznaję konieczności formalnych
+                        atestów czy gwarancji. To właśnie głęboka znajomość tematu i wieloletnie praktyki stanowią o
+                        moim profesjonalizmie.
+                        </br> </br>
+                        Jeżeli dysponujecie Państwo dużymi i wartościowymi kolekcjami filatelistycznymi, serdecznie
+                        zapraszam do współpracy. Mogę  przyjechać do Państwa lub zapraszam do siedziby naszej firmy.
+                        </br> </br>
+                        Płatność gotówką do ręki bądź przelewem - jestem elastyczny i dostosowuję się do Waszych
+                        preferencji.
+                        </br> </br>
+                        Moim priorytetem jest zapewnienie najlepszych cen na rynku filatelistycznym, doceniając
+                        jednocześnie wartość Waszych kolekcji. Zapraszam do kontaktu i doświadczenia razem pasji
+                        filatelistycznej!
+
+
+                    </p>
+
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
