start achievments section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         content="Odkryj fascynujący świat filatelistyki na naszej stronie. Znajdź cenne informacje, porady i inspiracje dla kolekcjonerów znaczków pocztowych. Dołącz do naszej społeczności pasjonatów i poszerz swoją wiedzę o historii oraz różnorodności znaczków pocztowych.">
     <meta name="keywords"
         content="Filatelistyka, Znaczki pocztowe, Kolekcje znaczków, Pasja filatelistyczna, Kolekcjonowanie znaczków, Historia poczty, Rzemiosło filatelistyczne, Społeczność filatelistyczna, Znaczkomania, Znaczkowe skarby, Wartościowe znaczki, Znaczkowe odkrycia, Kupno i sprzedaż znaczków, Artykuły filatelistyczne, Filatelistyczne wydarzenia, Wiedza filatelistyczna, Nowości w świecie znaczków, Kuriozalne znaczki, Filatelistyczne blogowanie, Znaczkowe inspiracje">
+    <!-- Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -98,14 +100,12 @@
                         Moim priorytetem jest zapewnienie najlepszych cen na rynku filatelistycznym, doceniając
                         jednocześnie wartość Waszych kolekcji. Zapraszam do kontaktu i doświadczenia razem pasji
                         filatelistycznej!
-
-
                     </p>
-
                     </p>
                 </div>
             </div>
         </section>
+
     </main>
 </body>
 
