--- a/index.html
+++ b/index.html
@@ -105,7 +105,29 @@
                 </div>
             </div>
         </section>
-
+        <section class="section achievments">
+            <div class="achievments__img">
+                <div class="achievments__shadow">
+                    <div class="wrapper">
+                        <div class="achievments__card">
+                            <i class="ti ti-mood-crazy-happy"></i>
+                            <p>100%</p>
+                            <p>zadowolonych klientów</p>
+                        </div>
+                        <div class="achievments__card">
+                            <i class="ti ti-cards"></i>
+                            <p>3500</p>
+                            <p>znaczków i monet</p>
+                        </div>
+                        <div class="achievments__card">
+                            <i class="ti ti-users"></i>
+                            <p>350</p>
+                            <p>obsłużonych klientów</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
