--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             </div>
         </section>
         <section class="section achievments">
+            <div class="white-block white-block--left white-block--top"></div>
             <div class="achievments__img">
                 <div class="achievments__shadow">
                     <div class="wrapper">
@@ -126,6 +127,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="white-block white-block--right white-block--bottom"></div>
             </div>
         </section>
     </main>
