add menu and stamps section

--- a/index.html
+++ b/index.html
@@ -130,6 +130,31 @@
                 <div class="white-block white-block--right white-block--bottom"></div>
             </div>
         </section>
+        <section class="section stamps">
+            <div class="wrapper">
+                <h2 class="section__heading">Znaczki</h2>
+                <menu class="stamps__menu">
+                    <div class="button button--dark button--width">Białystok</div>
+                    <div class="button button--dark button--width">Kraków</div>
+                    <div class="button button--dark button--width">Białystok</div>
+                    <div class="button button--dark button--width">Kraków</div>
+                    <div class="button button--dark button--width">Białystok</div>
+                    <div class="button button--dark button--width">Kraków</div>
+                    <div class="button button--dark button--width">Białystok</div>
+                    <div class="button button--dark button--width">Kraków</div>
+                    <div class="button button--dark button--width">Białystok</div>
+                    <div class="button button--dark button--width">Kraków</div>
+                    <div class="button button--dark button--width">Białystok</div>
+                    <div class="button button--dark button--width">Kraków</div>
+                    <div class="button button--dark button--width">Białystok</div>
+                    <div class="button button--dark button--width">Kraków</div>
+                    <div class="button button--dark button--width">Białystok</div>
+                    <div class="button button--dark button--width">Kraków</div>
+                    <div class="button button--dark button--width">Białystok</div>
+                    <div class="button button--dark button--width">Kraków</div>
+                </menu>
+            </div>
+        </section>
     </main>
 </body>
 
