add functionality to stamps

--- a/index.html
+++ b/index.html
@@ -139,19 +139,12 @@
                 </menu>
                 <div class="stamps__box">
                     <div class="stamps__background">
-                        <img src="./dist/img/stamps--main.png" alt="Znaczek pocztowy z Francji (Paryż)">
+                        <img id="cardUrl" src="./dist/img/stamps--main.png" alt="Znaczek pocztowy z Francji (Paryż)">
                     </div>
                     <div class="stamps__shadow">
                         <div class="stamps__text-box">
-                            <h3>Wrocław</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, qui vero laudantium
-                                ipsam
-                                nesciunt deleniti explicabo consequuntur eius culpa quos quae veniam aliquid accusamus
-                                cumque temporibus
-                                mollitia amet sint expedita corporis voluptas repudiandae totam. Id saepe veritatis
-                                aperiam eius quasi
-                                enim quibusdam corporis
+                            <h3 id="cardTitle"></h3>
+                            <p id="cardDescription">
                             </p>
                             <a href="#" class="button">Skontaktuj się ze mną</a>
                         </div>
