change name of the white block and add --dark

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             </div>
         </div>
-        <div class="white-block white-block--right white-block--bottom"></div>
+        <div class="block block--right block--bottom"></div>
     </header>
 
     <main class="main">
@@ -107,7 +107,7 @@
             </div>
         </section>
         <section class="section achievments">
-            <div class="white-block white-block--left white-block--top"></div>
+            <div class="block block--left block--top"></div>
             <div class="achievments__img">
                 <div class="achievments__shadow">
                     <div class="wrapper">
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="white-block white-block--right white-block--bottom"></div>
+                <div class="block block--right block--bottom"></div>
             </div>
         </section>
         <section class="section stamps">
@@ -152,6 +152,7 @@
                 </div>
             </div>
         </section>
+        <section class="section section--dark"></section>
     </main>
 </body>
 
