--- a/index.html
+++ b/index.html
@@ -151,8 +151,25 @@
                     </div>
                 </div>
             </div>
+            <div class="block block--right block--bottom block--dark"></div>
         </section>
-        <section class="section section--dark"></section>
+        <section class="section section--dark quotation">
+            <div class="wrapper">
+                <h2 class="section__heading">wycena</h2>
+                <p>
+                    Wycena znaczków jest całkowicie bezpłatna i niezobowiązująca do transakcji. Możliwe jest
+                    przeprowadzenie wstępnej oceny na podstawie przesłanych zdjęć lub wideo rozmowy. Niemniej jednak,
+                    ostateczna wycena zawsze odbywa się podczas spotkania twarzą w twarz, po dokładnym przejrzeniu całej
+                    kolekcji. 😁
+                </p>
+                <p>
+                    Największe zainteresowanie wzbudzają u mnie znaczki polskie z okresów 1860 – 1960 oraz 2000 - 2024,
+                    a także znaczki z ludowej Republiki Chińskiej z lat 1960-1975. Ponadto, chętnie przyjrzymy się
+                    również wartościowym kolekcjom z państw europejskich, takich jak Rosja, ZSRR, III Rzesza, Generalne
+                    Gubernatorstwo i inne.
+                </p>
+                <a href="#" class="button">Skontaktuj się ze mną</a>
+        </section>
     </main>
 </body>
 
