--- a/index.html
+++ b/index.html
@@ -170,6 +170,57 @@
                 </p>
                 <a href="#" class="button">Skontaktuj się ze mną</a>
         </section>
+        <section class="section contact">
+            <div class="block block--dark block--left block--top"></div>
+            <div class="wrapper">
+                <h2 class="section__heading">
+                    kontakt
+                </h2>
+                <div class="contact__bar">
+                    <a href="https://maps.app.goo.gl/UpFe3iUy4yW7sooa7" target="_blank"> <i class="ti ti-map-pin"></i>
+                        Widełki, Świętokrzyskie</a>
+                    <a href="mailto:łukaszkaczmarczyk@gmail.com" target="_blank"> <i class="ti ti-mail"></i>
+                        łukaszkaczmarczyk@gmail.com</a>
+                    <a href="tel: +48 785 559 894"> <i class="ti ti-phone"></i> +48 785 559 894</a>
+                </div>
+                <form class="contact__form">
+                    <div>
+                        <p>
+                            <label for="firstname">Imię*</label>
+                            <input type="text" name="fistname" placeholder="Imię" required>
+                        </p>
+                        <p> <label for="lastname">Nazwisko*</label>
+                            <input type="text" name="lastname" placeholder="Nazwisko" required>
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <label for="phone">Telefon*</label>
+                            <input type="tel" name="phone" placeholder="Telefon" required>
+                        </p>
+                        <p> <label for="email">Email*</label>
+                            <input type="email" name="email" placeholder="Email" required>
+                        </p>
+                        <p> <label for="code">Kod pocztowy*</label>
+                            <input type="text" name="code" placeholder="Kod pocztowy" required>
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <label for="message">Wiadomość*</label>
+                            <textarea name="message" placeholder="Wiadomość" required></textarea>
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            <label for="numberOfPhoto">Liczba zdjęć*</label>
+                            <input type="number" min="0" max="10" name="numberOfPhoto" placeholder="Liczba zdjęć"
+                                required />
+                        </p>
+                    </div>
+                </form>
+            </div>
+        </section>
     </main>
 </body>
 
