--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             </button>
         </div>
         <div class="nav__links" id="navLinks">
-            <a href="#" class="nav__item">o mnie</a>
-            <a href="#" class="nav__item">znaczki</a>
-            <a href="#" class="nav__item">wycena</a>
-            <a href="#" class="nav__item">kontakt</a>
+            <a href="#about-me" class="nav__item">o mnie</a>
+            <a href="#stamps" class="nav__item">znaczki</a>
+            <a href="#quotation" class="nav__item">wycena</a>
+            <a href="#contact" class="nav__item">kontakt</a>
         </div>
         </div>
     </nav>
@@ -74,7 +74,7 @@
     </header>
 
     <main class="main">
-        <section class="section about-me">
+        <section class="section about-me" id="about-me">
             <div class="wrapper">
                 <h2 class="section__heading">o mnie</h2>
                 <div class="about-me__box">
@@ -131,7 +131,7 @@
                 <div class="block block--right block--bottom"></div>
             </div>
         </section>
-        <section class="section stamps">
+        <section class="section stamps" id="stamps">
             <div class="wrapper">
                 <h2 class="section__heading">Znaczki</h2>
                 <menu class="stamps__menu" id="stampsMenu">
@@ -153,7 +153,7 @@
             </div>
             <div class="block block--right block--bottom block--dark"></div>
         </section>
-        <section class="section section--dark quotation">
+        <section class="section section--dark quotation" id="quotation">
             <div class="wrapper">
                 <h2 class="section__heading">wycena</h2>
                 <p>
@@ -170,7 +170,7 @@
                 </p>
                 <a href="#" class="button">Skontaktuj się ze mną</a>
         </section>
-        <section class="section contact">
+        <section class="section contact" id="contact">
             <div class="block block--dark block--left block--top"></div>
             <div class="wrapper">
                 <h2 class="section__heading">
