make a basic structure of contact

--- a/index.html
+++ b/index.html
@@ -186,38 +186,41 @@
                 <form class="contact__form">
                     <div>
                         <p>
-                            <label for="firstname">Imię*</label>
+                            <label for="firstname">Imię</label>
                             <input type="text" name="fistname" placeholder="Imię" required>
                         </p>
-                        <p> <label for="lastname">Nazwisko*</label>
+                        <p> <label for="lastname">Nazwisko</label>
                             <input type="text" name="lastname" placeholder="Nazwisko" required>
                         </p>
                     </div>
                     <div>
                         <p>
-                            <label for="phone">Telefon*</label>
+                            <label for="phone">Telefon</label>
                             <input type="tel" name="phone" placeholder="Telefon" required>
                         </p>
-                        <p> <label for="email">Email*</label>
+                        <p> <label for="email">Email</label>
                             <input type="email" name="email" placeholder="Email" required>
                         </p>
-                        <p> <label for="code">Kod pocztowy*</label>
+                        <p> <label for="code">Kod pocztowy</label>
                             <input type="text" name="code" placeholder="Kod pocztowy" required>
                         </p>
                     </div>
                     <div>
                         <p>
-                            <label for="message">Wiadomość*</label>
+                            <label for="message">Wiadomość</label>
                             <textarea name="message" placeholder="Wiadomość" required></textarea>
                         </p>
                     </div>
                     <div>
                         <p>
-                            <label for="numberOfPhoto">Liczba zdjęć*</label>
-                            <input type="number" min="0" max="10" name="numberOfPhoto" placeholder="Liczba zdjęć"
-                                required />
+                            <label for="numberOfPhoto">Liczba zdjęć</label>
+                            <input type="text" name="numberOfPhoto" placeholder="Liczba zdjęć" required />
                         </p>
                     </div>
+                    <div class="imageInput">
+
+                    </div>
+                    <button class="button button--active" type="submit">Wyślij</button>
                 </form>
             </div>
         </section>
