--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- JS -->
     <script src="./dist/js/nav.min.js" defer></script>
     <script src="./dist/js/stamps.min.js" defer></script>
+    <script src="./dist/js/footer.min.js" defer></script>
     <!-- CSS -->
     <link rel="stylesheet" href="./dist/css/hamburger.min.css">
     <link rel="stylesheet" href="./dist/css/style.min.css">
@@ -225,6 +226,15 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <p>
+            <span>
+                Filatelistyka
+            </span>
+            Łukasz Kaczmarczyk © <span id="currentYearSpan"></span> | Wszelkie prawa zastrzeżone
+        </p>
+    </footer>
 </body>
 
 </html>
