fix some bugs related with buttons in stamps

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             entuzjastami z całej Polski.
                         </p>
 
-                        <a href="#" class="button">Poznaj mnie</a>
+                        <a href="#about-me" class="button">Poznaj mnie</a>
                     </div>
                 </div>
 
@@ -147,7 +147,7 @@
                             <h3 id="cardTitle"></h3>
                             <p id="cardDescription">
                             </p>
-                            <a href="#" class="button">Skontaktuj się ze mną</a>
+                            <a href="#contact" class="button">Skontaktuj się ze mną</a>
                         </div>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                     również wartościowym kolekcjom z państw europejskich, takich jak Rosja, ZSRR, III Rzesza, Generalne
                     Gubernatorstwo i inne.
                 </p>
-                <a href="#" class="button">Skontaktuj się ze mną</a>
+                <a href="#contact" class="button">Skontaktuj się ze mną</a>
         </section>
         <section class="section contact" id="contact">
             <div class="block block--dark block--left block--top"></div>
