finish frontend side app

--- a/index.html
+++ b/index.html
@@ -118,14 +118,10 @@
                             <p>100%</p>
                             <p>zadowolonych klientów</p>
                         </div>
-                        <div class="achievments__card">
-                            <i class="ti ti-cards"></i>
-                            <p>3500</p>
-                            <p>znaczków i monet</p>
-                        </div>
+
                         <div class="achievments__card">
                             <i class="ti ti-users"></i>
-                            <p>350</p>
+                            <p>550</p>
                             <p>obsłużonych klientów</p>
                         </div>
                     </div>
@@ -179,10 +175,12 @@
                     kontakt
                 </h2>
                 <div class="contact__bar">
-                    <a href="https://maps.app.goo.gl/UpFe3iUy4yW7sooa7" target="_blank"> <i class="ti ti-map-pin"></i>
-                        Widełki, Świętokrzyskie</a>
-                    <a href="mailto:łukaszkaczmarczyk@gmail.com" target="_blank"> <i class="ti ti-mail"></i>
-                        łukaszkaczmarczyk@gmail.com</a>
+                    <a href="https://maps.app.goo.gl/ayWcbvKp5fWakqxh6" target="_blank"> <i class="ti ti-map-pin"></i>
+                        Widełki 26b (26-021 Daleszyce)
+                    </a>
+                    <a href="mailto:lukaszkaczmarczyk@interia.eu" target="_blank"> <i class="ti ti-mail"></i>
+                        lukaszkaczmarczyk@interia.eu
+                    </a>
                     <a href="tel: +48 785 559 894"> <i class="ti ti-phone"></i> +48 785 559 894</a>
                 </div>
                 <form class="contact__form" enctype="multipart/form-data">
