add aria-label to button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p>Filatelistyka</p>
                 Łukasz Kaczmarczyk
             </a>
-            <button class=" hamburger hamburger--spin" type="button" id="hamburger">
+            <button class=" hamburger hamburger--spin" type="button" id="hamburger" aria-label="open navigation button">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
                 </span>
