--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="nav__links" id="navLinks">
             <a href="#about-me" class="nav__item">o mnie</a>
-            <a href="#stamps" class="nav__item">znaczki</a>
+            <a href="#stamps" class="nav__item">Dojazd</a>
             <a href="#quotation" class="nav__item">wycena</a>
             <a href="#contact" class="nav__item">kontakt</a>
         </div>
@@ -131,13 +131,13 @@
         </section>
         <section class="section stamps" id="stamps">
             <div class="wrapper">
-                <h2 class="section__heading">Znaczki</h2>
+                <h2 class="section__heading">Dojazd na terenie całej polski</h2>
                 <menu class="stamps__menu" id="stampsMenu">
 
                 </menu>
                 <div class="stamps__box">
                     <div class="stamps__background">
-                        <img id="cardUrl" src="./dist/img/stamps--main.png" alt="Znaczek pocztowy z Francji (Paryż)">
+                        <img id="cardUrl" src="./dist/img/Warszawa.jpg" alt="Warszawa">
                     </div>
                     <div class="stamps__shadow">
                         <div class="stamps__text-box">
@@ -207,13 +207,13 @@
                     </div>
                     <div class="textarea-box">
                         <label for="message">Wiadomość</label>
-                        <textarea name="message" placeholder="Wiadomość" required></textarea>
+                        <textarea name="message" placeholder="Wiadomość" rows="10" required></textarea>
                     </div>
                     <div>
                         <p>
                             <label for="numberOfPhoto">Liczba zdjęć</label>
-                            <input type="text" name="numberOfPhoto" placeholder="Liczba zdjęć" id="numberOfPhotoInput"
-                                min="0" max="15" required />
+                            <input type="text" name="numberOfPhoto" placeholder="Liczba zdjęć (maksymalnie 15)"
+                                id="numberOfPhotoInput" min="0" max="15" required />
                         </p>
                     </div>
                     <div class="imageInput" id="imageInput">
