add simple gallery

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <!-- JS -->
     <script src="./dist/js/nav.min.js" defer></script>
     <script src="./dist/js/stamps.min.js" defer></script>
-    <script src="./dist/js/footer.min.js" defer></script>
+    <script src="./dist/js/gallery.min.js" defer></script>
     <script src="./dist/js/contact.min.js" defer></script>
+    <script src="./dist/js/footer.min.js" defer></script>
     <!-- CSS -->
     <link rel="stylesheet" href="./dist/css/hamburger.min.css">
     <link rel="stylesheet" href="./dist/css/style.min.css">
@@ -168,8 +169,19 @@
                 </p>
                 <a href="#contact" class="button">Skontaktuj się ze mną</a>
         </section>
-        <section class="section contact" id="contact">
+        <section class="section gallery">
             <div class="block block--dark block--left block--top"></div>
+            <div class="wrapper">
+                <h2 class="section__heading">
+                    Galeria
+                </h2>
+                <div class="gallery__group" id="galleryGroup">
+
+                </div>
+            </div>
+        </section>
+        <section class="section section--dark contact" id="contact">
+            <div class="block block--left block--top"></div>
             <div class="wrapper">
                 <h2 class="section__heading">
                     kontakt
