add gallery to nav and remove quotation

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="nav__links" id="navLinks">
             <a href="#about-me" class="nav__item">o mnie</a>
             <a href="#stamps" class="nav__item">Dojazd</a>
-            <a href="#quotation" class="nav__item">wycena</a>
+            <a href="#gallery" class="nav__item">Galeria</a>
             <a href="#contact" class="nav__item">kontakt</a>
         </div>
         </div>
@@ -152,7 +152,7 @@
             </div>
             <div class="block block--right block--bottom block--dark"></div>
         </section>
-        <section class="section section--dark quotation" id="quotation">
+        <section class="section section--dark quotation">
             <div class="wrapper">
                 <h2 class="section__heading">wycena</h2>
                 <p>
@@ -169,7 +169,7 @@
                 </p>
                 <a href="#contact" class="button">Skontaktuj się ze mną</a>
         </section>
-        <section class="section gallery">
+        <section class="section gallery" id="gallery">
             <div class="block block--dark block--left block--top"></div>
             <div class="wrapper">
                 <h2 class="section__heading">
