add prelaod to styles

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <script src="./dist/js/contact.min.js" defer></script>
     <script src="./dist/js/footer.min.js" defer></script>
     <!-- CSS -->
-    <link rel="stylesheet" href="./dist/css/hamburger.min.css">
-    <link rel="stylesheet" href="./dist/css/style.min.css">
+    <link rel="stylesheet preload" as="style" href="./dist/css/hamburger.min.css">
+    <link rel="stylesheet preload" as="style" href="./dist/css/style.min.css">
 </head>
 
 <body>
