--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
     <script src="./dist/js/gallery.min.js" defer></script>
     <script src="./dist/js/contact.min.js" defer></script>
     <script src="./dist/js/footer.min.js" defer></script>
+    <script src="./dist/js/lightbox.min.js" defer></script>
+
     <!-- CSS -->
     <link rel="stylesheet preload" as="style" href="./dist/css/hamburger.min.css">
     <link rel="stylesheet preload" as="style" href="./dist/css/style.min.css">
+    <link rel="stylesheet preload" href="./dist/css/lightbox.min.css">
 </head>
 
 <body>
@@ -235,7 +238,6 @@
             </div>
         </section>
     </main>
-
     <footer class="footer">
         <p>
             <span>
