--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             alt="Lupa leżąca na dużej ilości róznokolorowych znaczków pocztowych" class="about-me__img">
                     </div>
                     <p class="about-me__text-box">
-                        Nazywam się Łukasz Kaczmarczyk, i od lat zajmuję się moją pasją, jaką jest filatelistyka. W
+                        Nazywam się Łukasz Kaczmarczyk. Od lat rozwijam moją pasję, jaką jest filatelistyka. W
                         moim życiu znaczki odgrywają szczególne miejsce, a moje wieloletnie doświadczenie pozwala mi
                         z pełnym zaufaniem prowadzić działania w tej dziedzinie.
                         </br> </br>
@@ -101,7 +101,7 @@
                         Jeżeli dysponujecie Państwo dużymi i wartościowymi kolekcjami filatelistycznymi, serdecznie
                         zapraszam do współpracy. Mogę  przyjechać do Państwa lub zapraszam do siedziby naszej firmy.
                         </br> </br>
-                        Płatność gotówką do ręki bądź przelewem - jestem elastyczny i dostosowuję się do Waszych
+                        Płatność gotówką bądź przelewem - jestem elastyczny i dostosowuję się do Waszych
                         preferencji.
                         </br> </br>
                         Moim priorytetem jest zapewnienie najlepszych cen na rynku filatelistycznym, doceniając
