--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <menu class="stamps__menu" id="stampsMenu">
 
                 </menu>
-                <div class="stamps__box">
+                <div class="stamps__box" id="imageBox">
                     <div class="stamps__background">
                         <img id="cardUrl" src="./dist/img/Warszawa.jpg" alt="Warszawa">
                     </div>
